#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ISOARpkg"
authors = [{name = "Martin Offermann", email = "none@none.no"}]
dynamic = ["version", "description"]
#description = "IRIS-SOAR is a modular SOAR implementation written in Python."